--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     </div>
 
     <div class="center-container">
-      <a href="https://lgamigust.com/JlyVJ" target="_blank" id="btnGalinha" class="btn btn-mistery" style="width: 300px; text-align: center;">
+      <a href="https://track.betmenaffiliates.com/visit/?bta=38902&nci=5849&afp10=Telegram&afp1=ANDRREE" target="_blank" id="btnGalinha" class="btn btn-mistery" style="width: 300px; text-align: center;">
         <i class="fas fa-drumstick-bite"></i> 
         <span id="btnGalinhaText">Acesso direto</span>
       </a>
